fix: Fix Poll REST API Responses - MEED-7471 - Meeds-io/MIPs#147 Prior to this change, the Poll response code wasn't sent through Spring API but through Jax-Rs API. This change modifies the Reponse builder to use the one used for Spring instead of Jax-RS.